# Thinkpad-Fancontrol-C--

./: CMakeLists.txt  FanControl.cpp  FanControl.h  Logger.cpp  Logger.h  README.md  fancontrol.cpp
